codereview: Mysql 8.0 以上，Sequel 连接时报插件错

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -107,3 +107,63 @@ Next_Pro
 ##### 2025.1.27
 
 - Next_Pro 周报 查询 + 落表 + 展示
+
+##### 2025.2.2  进展
+
+部署至云端数据库（服务器默认安装了 Docker 环境 - 提供了容器化的部署方式
+
+```js
+// check docker 安装
+docker --version // Docker version 26.1.3, build b72abbb
+```
+
+##### 2025.2.10  进展
+
+- Next_Pro 周报 数据源 modal+页面展示，并投入使用写 LTN15周报
+
+##### 2025.2.12 进展
+
+- Next_Pro 月报
+- Next_Pro 初始化部署
+
+部署指令操作：
+
+1、更新 Next_Pro 代码
+
+- https://gitee.com/CodingWithAlice/Next_Pro 更新
+- 方便国内 git pull 拉取
+
+2、在 Next_Pro 目录构建：
+
+```
+sudo docker build -t next_pro .
+```
+
+- 本地 npm run build 确认没有问题
+- => => writing image sha256:32f2351a67a8c4704e94e42177f64cdb1e16aa7d1e9eb4bb2c59c3d8ac2c3440
+   => => naming to docker.io/library/next_pro 212.7s
+
+3、启动服务：
+
+```js
+sudo docker run -d -p 3000:3000 next_pro
+```
+
+- 查看运行中的容器 
+
+   ```js
+   sudo docker ps
+   ```
+
+   如果 找到对应 IMAGES + STATUS为 up 即成功
+
+- 查看容器日志 sudo docker logs next_pro 获取日志
+
+- 检查端口占用情况 sudo netstat -tuln | grep :3000 检查主机的 3000 端口是否被监听
+  (启动后， 在防火墙配置开放该端口  3000  的入站规则)
+
+访问链接：
+
+http://121.43.164.209:3000
+
+http://codingwithalice.top:3000/
